# Modern-CPP

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
C++11/: CMakeLists.txt  delicated_constructors.cpp  rule_of_five.cpp
C++17/: CMakeLists.txt  fold_expressions.cpp  structured_bindings.cpp
C++20/: CMakeLists.txt
